gccida/g0/load_killed_in_block_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_killed_in_block_p/src/gcse.c:1966:47: error: use of undeclared identifier 'uid_cuid_1'
if ( ( !avail_p || uid_limit <= *( ( _DWORD *)uid_cuid_1 + *( int *)( list_entry->fld[0].rtwint + 8))) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_killed_in_block_p/src/gcse.c:1967:44: error: use of undeclared identifier 'uid_cuid_1'
&& ( avail_p || uid_limit >= *( ( _DWORD *)uid_cuid_1 + *( int *)( list_entry->fld[0].rtwint + 8))) ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_killed_in_block_p/src/gcse.c:1977:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
list_entry = ( rtx)list_entry[1]; 
                   ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_killed_in_block_p/src/gcse.c:1981:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
list_entry = ( rtx)list_entry[1]; 
                   ^~~~~~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_killed_in_block_p/src/obj/gcse.o] Error 1
